♻️refactor|split framework-specific skill content into references/ (#26)
* ♻️refactor|split framework-specific skill content into references/

Apply the Agent Skills progressive-disclosure layout that CLAUDE.md
already documents but no skill used: every SKILL.md was monolithic and
loaded whole on trigger.

No content is removed — only relocated, with a pointer in SKILL.md
naming when to read each reference.

- chottomatte-archi 59.2KB -> 28.3KB: Spring wiring, heavy ECM/SDK
  ports, Nuxeo addon packaging/log4j2/vocabularies and testing across
  the seam move to references/ (23KB of that was Nuxeo-only detail
  loading on every Java session).
- igiari-tdd 30.9KB -> 22.5KB: Maven/mvnd/Gradle invocations and the
  build-tool evidence escalation ladder move to references/.
- kaizen-refactor 16.1KB -> 12.3KB: Tier 1 promotion criteria and the
  record-class finding move to references/.

A typical Java session (chottomatte-archi + igiari-tdd + kanpeki-fp)
drops from ~97.7KB to ~58.4KB of resident instructions, ~24.4k to
~14.6k tokens.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_013rMMmRfp8TCpUkq3BSLu6G

* ♻️refactor|stop loading java/nuxeo rules and skill history unconditionally

Three sources of always-resident context that no session could opt out of:

- global/CLAUDE.md @-imported java.md and nuxeo.md unconditionally, so
  8.5KB of Java and Nuxeo platform rules loaded into every session
  regardless of subject — including bash, markdown and Python work. They
  are now pointed at, to be read on demand when a session turns out to
  match. Both files still install verbatim; install-global.sh keeps
  copying them, since a missing file would leave the pointers dangling.
- CLAUDE.md's four "Active work" blocks restated rules that each SKILL.md
  already owns and docs/design-log.md already explains. Condensed to a
  state table plus the cross-skill rules that live nowhere else; no
  history is lost.
- Documented the pr